--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-textinput-effects": "^0.4.2",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19"
   },
   "devDependencies": {
